[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Ultimate_Deimos <egor.miloslavsky@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
